--- a/app/src/main/res/layout/activity_add_shipping_address.xml
+++ b/app/src/main/res/layout/activity_add_shipping_address.xml
@@ -43,16 +43,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sb_size_10"
+            android:layout_marginTop="@dimen/sb_size_5"
             android:background="@color/white"
             android:orientation="vertical">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/fullNameTextInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/sb_size_20"
+                android:layout_marginTop="@dimen/sb_size_20"
+                app:hintTextColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fullNameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Full Name"
+                    android:textColor="@color/black"
+                    android:theme="@style/MyEditTextTheme" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="@dimen/sb_size_40"
+                android:layout_marginTop="@dimen/sb_size_20"
                 app:hintTextColor="@color/black"
                 android:hint="Country Region"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -75,11 +95,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 app:hintTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.6"
                 app:layout_constraintStart_toStartOf="parent"
+                app:errorEnabled="true"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -96,10 +117,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 app:hintTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:errorEnabled="true"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -116,7 +138,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
+                app:errorEnabled="true"
                 app:hintTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -136,8 +159,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 app:hintTextColor="@color/black"
+                app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
@@ -158,8 +182,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 app:hintTextColor="@color/black"
+                app:errorEnabled="true"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
@@ -179,7 +205,7 @@
                 android:id="@+id/radio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Primary"
+                android:text="Use this as your Default Address"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:buttonTint="@color/black"
@@ -187,16 +213,37 @@
                 android:layout_marginHorizontal="@dimen/sb_size_20"
                 android:layout_marginTop="12dp"/>
 
-            <Button
-                android:id="@+id/addAddressButton"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                android:layout_marginVertical="@dimen/sb_size_30"
-                android:background="@color/black"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="Save" />
+                android:layout_marginVertical="@dimen/sb_size_30">
+
+                <Button
+                    android:id="@+id/cancelButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/white"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/sb_size_5"
+                    android:layout_weight="1"
+                    android:text="Cancel" />
+
+                <Button
+                    android:id="@+id/addAddressButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/sb_size_5"
+                    android:layout_weight="1"
+                    android:text="Save" />
+            </LinearLayout>
+
 
 
         </LinearLayout>
