--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -890,7 +890,7 @@
             android:id="@+id/btn_add_to_bag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
+            android:backgroundTint="@color/black"
             android:fontFamily="@font/gothamblack"
             android:text="Add to bag"
             android:textColor="@color/white"
