--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,8 +60,7 @@
                         android:layout_marginRight="32dp"
                         android:layout_marginLeft="32dp"
                         app:hintTextColor="@color/black"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView"
-                        tools:layout_editor_absoluteX="20dp">
+                        app:layout_constraintTop_toBottomOf="@+id/cardView">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/mobileNoEditText"
