--- a/app/src/main/res/layout/activity_all_product_category.xml
+++ b/app/src/main/res/layout/activity_all_product_category.xml
@@ -74,7 +74,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/tvFilterHeader"
@@ -92,16 +93,21 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
-                        android:id="@+id/imgClose"
-                        android:layout_width="@dimen/sb_size_24"
-                        android:layout_height="@dimen/sb_size_24"
+                    <TextView
+                        android:id="@+id/tvClearAll"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/sb_size_16"
-                        android:contentDescription="@string/close"
-                        android:src="@drawable/ic_close"
+                        android:background="@drawable/bg_text_action_close"
+                        android:paddingHorizontal="@dimen/sb_size_16"
+                        android:paddingVertical="@dimen/sb_size_12"
+                        android:text="@string/filter_reset"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/separatorLine"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/tvFilterHeader" />
+                        app:layout_constraintTop_toTopOf="@+id/tvFilterHeader"
+                        app:layout_constraintVertical_bias="0.444" />
 
                     <View
                         android:id="@+id/separatorLine"
@@ -124,77 +130,168 @@
                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="38"
+                            android:layout_weight="32"
                             android:background="@color/grey_50"
                             android:elevation="@dimen/sb_size_2"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/tvCategory"
+                            <LinearLayout
+                                android:id="@+id/llCategory"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/white"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/category"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16"
-                                android:textStyle="bold" />
+                                android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/tvPrice"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/grey_50"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/price"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16" />
+                                <View
+                                    android:id="@+id/lineCategorySelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="visible" />
 
-                            <TextView
-                                android:id="@+id/tvSize"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/grey_50"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/size"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16" />
+                                <TextView
+                                    android:id="@+id/tvCategory"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/category"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16"
+                                    android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/tvColor"
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/grey_50"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/color"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16" />
+                            </LinearLayout>
 
-                            <TextView
-                                android:id="@+id/tvType"
+                            <LinearLayout
+                                android:id="@+id/llPrice"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/grey_50"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/type"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16" />
+                                android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/tvDiscount"
+                                <View
+                                    android:id="@+id/linePriceSelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="invisible" />
+
+                                <TextView
+                                    android:id="@+id/tvPrice"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/price"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:id="@+id/llSize"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/sb_size_50"
-                                android:background="@color/grey_50"
-                                android:gravity="start|center_vertical"
-                                android:paddingHorizontal="@dimen/sb_size_16"
-                                android:text="@string/discount"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_16" />
+                                android:orientation="horizontal">
+
+                                <View
+                                    android:id="@+id/lineSizeSelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="invisible" />
+
+                                <TextView
+                                    android:id="@+id/tvSize"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/size"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/llColor"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/sb_size_50"
+                                android:orientation="horizontal">
+
+                                <View
+                                    android:id="@+id/lineColorSelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="invisible" />
+
+                                <TextView
+                                    android:id="@+id/tvColor"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/color"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:id="@+id/llType"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/sb_size_50"
+                                android:orientation="horizontal">
+
+                                <View
+                                    android:id="@+id/lineTypeSelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="invisible" />
+
+                                <TextView
+                                    android:id="@+id/tvType"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/type"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/llDiscount"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/sb_size_50"
+                                android:orientation="horizontal">
+
+                                <View
+                                    android:id="@+id/lineDiscountSelected"
+                                    android:layout_width="@dimen/sb_size_3"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/black"
+                                    android:visibility="invisible" />
+
+                                <TextView
+                                    android:id="@+id/tvDiscount"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/discount"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+                            </LinearLayout>
+
 
                         </LinearLayout>
 
@@ -202,7 +299,7 @@
                             android:id="@+id/rvFilter"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="62"
+                            android:layout_weight="68"
                             android:background="@color/white" />
 
 
@@ -221,7 +318,8 @@
                         android:layout_height="wrap_content"
                         android:background="@color/white"
                         android:orientation="horizontal"
-                        android:paddingVertical="@dimen/sb_size_4"
+                        android:paddingHorizontal="@dimen/sb_size_10"
+                        android:paddingVertical="@dimen/sb_size_10"
                         android:weightSum="100"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -230,33 +328,39 @@
                         <RelativeLayout
                             android:layout_width="@dimen/sb_size_0"
                             android:layout_height="wrap_content"
-                            android:layout_weight="35">
+                            android:layout_weight="30">
 
-                            <Button
-                                android:id="@+id/btClearAll"
-                                android:layout_width="wrap_content"
+                            <TextView
+                                android:id="@+id/tvClose"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
                                 android:layout_gravity="center"
-                                android:textStyle="bold"
-                                android:backgroundTint="@color/grey_400"
-                                android:text="@string/clear"
-                                android:textColor="@color/black" />
+                                android:textColor="@color/black"
+                                android:background="@drawable/bg_text_action_close"
+                                android:gravity="center"
+                                android:paddingVertical="14dp"
+                                android:text="@string/close"
+                                android:textStyle="bold" />
                         </RelativeLayout>
 
                         <RelativeLayout
                             android:layout_width="@dimen/sb_size_0"
                             android:layout_height="wrap_content"
-                            android:layout_weight="65">
+                            android:layout_marginStart="@dimen/sb_size_10"
+                            android:layout_weight="70">
 
-                            <Button
-                                android:id="@+id/btApplyFilter"
-                                android:layout_width="wrap_content"
+                            <TextView
+                                android:id="@+id/tvApplyFilter"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textStyle="bold"
                                 android:layout_centerInParent="true"
-                                android:paddingHorizontal="@dimen/sb_text_size_28"
-                                android:text="@string/apply" />
+                                android:background="@color/grey_400"
+                                android:gravity="center"
+                                android:paddingVertical="@dimen/sb_size_14"
+                                android:text="@string/apply_filter"
+                                android:textColor="@color/white"
+                                android:textStyle="bold" />
 
                         </RelativeLayout>
 
@@ -281,10 +385,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:spanCount="2"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp"
                     tools:listitem="@layout/item_view_category"
-                    tools:visibility="gone" />
+                    tools:visibility="visible" />
 
                 <LinearLayout
                     android:id="@+id/llFilterParentLayout"
