--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingVertical="@dimen/sb_size_4">
 
     <com.shopping.bloom.utils.CustomImageView
         android:id="@+id/imgProductImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/sb_size_4"
-        android:layout_marginVertical="@dimen/sb_size_4"
+        android:layout_marginHorizontal="@dimen/sb_size_2"
+        android:background="@color/blue_grey_900"
         android:scaleType="centerCrop"
         app:height_proportion="1.3"
-        android:background="@color/blue_grey_900"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,23 +32,26 @@
         android:id="@+id/tvProductPrice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_6"
-        android:layout_marginStart="@dimen/sb_size_12"
-        android:text="₹ 1000"
+        android:layout_marginTop="@dimen/sb_size_3"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingHorizontal="@dimen/sb_size_4"
         android:textColor="@color/blue_grey_700"
         android:textSize="@dimen/sb_text_size_14"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage"
         app:layout_constraintStart_toStartOf="@+id/imgProductImage"
-        app:layout_constraintTop_toBottomOf="@+id/imgProductImage" />
+        app:layout_constraintTop_toBottomOf="@+id/imgProductImage"
+        tools:text="₹ 1000" />
 
     <HorizontalScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_6"
+        android:layout_marginTop="@dimen/sb_size_4"
         android:layout_marginBottom="@dimen/sb_size_16"
+        android:paddingVertical="@dimen/sb_size_2"
+        android:layout_marginStart="@dimen/sb_size_3"
         android:scrollbars="none"
-        android:paddingVertical="@dimen/sb_size_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage"
         app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
@@ -57,10 +61,9 @@
             android:id="@+id/llColorOptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="true"
             android:gravity="start"
-            android:orientation="horizontal">
-        </LinearLayout>
+            android:nestedScrollingEnabled="true"
+            android:orientation="horizontal" />
 
     </HorizontalScrollView>
 
