--- a/app/src/main/res/layout/layout_recyclerview_random_image.xml
+++ b/app/src/main/res/layout/layout_recyclerview_random_image.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:height_proportion="1.3"
         android:layout_marginHorizontal="@dimen/sb_size_2"
         android:background="@color/grey_100"
         android:foreground="?android:attr/selectableItemBackground"
